List ghost towns for ghosted players and scoreboard

--- a/src/app/discord/discord.component.html
+++ b/src/app/discord/discord.component.html
@@ -9,7 +9,7 @@
 	                        <h2 style="color: #dde6e4;">GrepoData Bot</h2>
 	                        <span style="color: #dde6e4; !important;">Add GrepoData commands to your Discord server!</span>
                         </div>
-                        <a target="_blank" rel="nofollow" href="https://discordapp.com/api/oauth2/authorize?client_id=652263344429858872&permissions=18432&scope=bot" alt="Add GrepoData Bot to Your Discord" class="button">
+                        <a target="_blank" rel="nofollow" href="https://discordapp.com/api/oauth2/authorize?client_id=652263344429858872&permissions=2147502080&scope=bot" alt="Add GrepoData Bot to Your Discord" class="button">
 	                        Add to Discord
                         </a>
                     </div>
