--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -83,6 +83,7 @@
         <li>DE: <a href="https://wiki.de.grepolis.com/wiki/Community-Projekte" target="_blank">https://wiki.de.grepolis.com/wiki/Community-Projekte</a></li>
         <li>NL: <a href="https://wiki.nl.grepolis.com/wiki/Scripts" target="_blank">https://wiki.nl.grepolis.com/wiki/Scripts</a></li>
         <li>IT: <a href="https://it.forum.grepolis.com/index.php?threads/lista-script-tool-approvati.3691/" target="_blank">https://it.forum.grepolis.com/index.php?threads/lista-script-tool-approvati.3691/</a></li>
+        <li>FR: <a href="https://forum.fr.grepolis.com/index.php?threads/grepodata.80374/post-2030923" target="_blank">https://forum.fr.grepolis.com/index.php?threads/grepodata.80374/post-2030923</a></li>
         <li>Others (please check your own local wiki, this is not an exhaustive list)</li>
       </ul>
     </div>
