--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -350,7 +350,7 @@
                       </ng-template>
                       <br/>
                       <div class="table-container">
-                        <div class="table" id="ghost_towns_table" style="">
+                        <div class="table ghost-towns-table" id="ghost_towns_table" style="">
                           <div class="row_custom header default">
                             <div class="cell">Town</div>
                             <div class="cell">Points</div>
