--- a/src/app/auth/profile/profile.component.html
+++ b/src/app/auth/profile/profile.component.html
@@ -56,6 +56,7 @@
       <span *ngIf="active_tab === 'password'"><app-change-password></app-change-password></span>
       <span *ngIf="active_tab === 'delete'"><app-delete-account></app-delete-account></span>
       <span *ngIf="active_tab === 'commands'"><app-demo-overview></app-demo-overview></span>
+      <span *ngIf="active_tab === 'changelog'"><app-changelog></app-changelog></span>
       <span *ngIf="active_tab === 'faq'">
 
         <div style="padding: 20px 20px 0">
