--- a/src/app/changelog/changelog.component.html
+++ b/src/app/changelog/changelog.component.html
@@ -15,185 +15,55 @@
         <!--</a>-->
         <!--</div>-->
         <!--<br/>-->
-        <div class="text-center"><h2 style=""> City Indexer Version Changelog</h2>
-        <h4><a href="https://github.com/grepodata/grepodata-userscript" target="_blank">
-          <i class="fa fa-github" aria-hidden="true"></i> source code
-        </a></h4></div>
-        <br/>
-        <br/>
-
-	      <h4>v4.0.1 22-04-2020 &nbsp; &nbsp; <span class="label label-default">Latest version</span></h4>
-	      <p>- Added parser for wisdom reports. You can now index wisdom reports from your inbox.</p>
-	      <p>- Added an intel shortcut to the context menu when you click on towns (you can disable this in the settings).</p>
-	      <p>- Added return and cancelable time to friendly movements (you can disable this in the settings).</p>
-	      <p>- Various bugfixes</p>
-	      <a href="https://github.com/GrepoDataTools/grepodata-backend/commit/adaa5b0cdbc32ae21786fef1a8d3738920385d62" target="_blank">
-		      <i class="fa fa-github" aria-hidden="true"></i> View changes on github.com
-	      </a>
-
-	      <hr/>
-
-	      <h4>v4.0.0 17-04-2020</h4>
-	      <p>- Users can now create and share notes about specific towns</p>
-	      <p>- BETA: Added unit intelligence to the command overview as an optional enhancement. If you want to try this out, enable it in the script settings.</p>
-	      <a href="https://github.com/GrepoDataTools/grepodata-backend/commit/0d2988e189820bbd07e65e2bce80a12f429bf4a2#diff-efe31ecbd0dfeba267ed288538be83c0" target="_blank">
-		      <i class="fa fa-github" aria-hidden="true"></i> View changes on github.com
-	      </a>
-
-	      <hr/>
-
-	      <h4>v3.9.1 15-04-2020</h4>
-	      <p>- Bugfix for keyboard shortcuts in inbox</p>
-	      <a href="https://github.com/GrepoDataTools/grepodata-backend/commit/34b538ccf9726da05c5ebc41f53cf8065f415c15#diff-efe31ecbd0dfeba267ed288538be83c0" target="_blank">
-		      <i class="fa fa-github" aria-hidden="true"></i> View changes on github.com
-	      </a>
-
-	      <hr/>
-
-	      <h4>v3.9.0 29-02-2020</h4>
-	      <p>- When viewing town intel with multiple indexer scripts installed, the intel from all installed indexes is now combined</p>
-	      <p>- Reverted back to old loading method</p>
-	      <a href="https://github.com/GrepoDataTools/grepodata-backend/commit/09b76f60a749401719921b2c4a6f181176644f48#diff-efe31ecbd0dfeba267ed288538be83c0" target="_blank">
-		      <i class="fa fa-github" aria-hidden="true"></i> View changes on github.com
-	      </a>
-
-	      <hr/>
-
-        <h4>v3.8.0 22-02-2020</h4>
-	      <p>- When sharing a report, the report is now always uploaded in order to increase sharing reliability</p>
-	      <p>- Changed script loading method</p>
-        <a href="https://github.com/GrepoDataTools/grepodata-backend/commit/960b5ddfbba9fae482b322ce224c0ca72cbf5f53#diff-efe31ecbd0dfeba267ed288538be83c0" target="_blank">
-          <i class="fa fa-github" aria-hidden="true"></i> View changes on github.com
-        </a>
-
-        <hr/>
-
-        <h4>v3.7.1 11-02-2020</h4>
-        <p>- Improved report sharing security (hide index key when sharing an undefined index)</p>
-        <a href="https://github.com/GrepoDataTools/grepodata-backend/commit/0cb34a8fd25829786d4192235aae7d63d6002349#diff-efe31ecbd0dfeba267ed288538be83c0" target="_blank">
-          <i class="fa fa-github" aria-hidden="true"></i> View changes on github.com
-        </a>
-
-        <hr/>
-
-        <h4>v3.7.0 09-02-2020</h4>
-        <p>- Added Discord share buttons for inbox and forum reports</p>
-        <a href="https://github.com/grepodata/grepodata-backend/commit/c05d0dbadce95ed17bc28ef3e8d260b49bbe56ee" target="_blank">
-          <i class="fa fa-github" aria-hidden="true"></i> View changes on github.com
-        </a>
-
-        <hr/>
-
-        <h4>v3.6.2 09-01-2020</h4>
-        <p>- Added optional buttons linking to player/alliance statistics on grepodata.com</p>
-        <a href="https://github.com/grepodata/grepodata-userscript/commit/c0ca3ed42221b5267b273ff2374708fdbad8720e" target="_blank">
-          <i class="fa fa-github" aria-hidden="true"></i> View changes on github.com
-        </a>
-
-        <hr/>
-
-        <h4>v3.6.0 25-10-2019</h4>
-        <p>- Added keyboard shortcuts for navigating the reports inbox ('[' for previous report and ']' for next report) </p>
-        <a href="https://github.com/grepodata/grepodata-userscript/commit/56b9b0538f94eb022934c31e13363666d03d15b2" target="_blank">
-          <i class="fa fa-github" aria-hidden="true"></i> View changes on github.com
-        </a>
-
-        <hr/>
-
-        <h4>v3.5.2 20-10-2019</h4>
-        <p>- Improved report hashing to better identify already indexed reports</p>
-        <a href="https://github.com/grepodata/grepodata-userscript/commit/8ba0c3a6f369abc5f4910d8b494b8a6196a1fc8a" target="_blank">
-          <i class="fa fa-github" aria-hidden="true"></i> View changes on github.com
-        </a>
-
-        <hr/>
-
-        <h4>v3.5.1 29-03-2019</h4>
-        <p>- Bugfix for town id regex (positive lookbehind not supported in browsers other than Chrome)</p>
-        <a href="https://github.com/grepodata/grepodata-userscript/commit/1e435b67bc7f4845fc16b1affb03b4d79addfca4" target="_blank">
-          <i class="fa fa-github" aria-hidden="true"></i> View changes on github.com
-        </a>
-
-        <hr/>
-
-          <h4>v3.05 17-03-2019</h4>
-        <p>- Added an in-game interface to browse enemy town intelligence</p>
-        <a href="https://github.com/grepodata/grepodata-userscript/commit/4f8fee92ed2b7feec8fed3247ab2af40e9d4f410" target="_blank">
-          <i class="fa fa-github" aria-hidden="true"></i> View changes on github.com
-        </a>
-
-        <hr/>
-
-        <h4>v3.03 18-12-2018</h4>
-        <p>- Improved date handling for forum reports where date is today</p>
-        <p>- Improved duplicate script handling. When using multiple scripts for different indexes, the lists of already indexed ids are now merged</p>
-        <a href="https://github.com/grepodata/grepodata-userscript/commit/4cbd1dc6e1b1c1374edafa8b46e7b908d10e99cc" target="_blank">
-          <i class="fa fa-github" aria-hidden="true"></i> View changes on github.com
-        </a>
-
-        <hr/>
-
-        <h4>v3.02 11-12-2018</h4>
-        <p>- Added support for indexing support reports from the inbox</p>
-        <p>- Bugfixes</p>
-
-        <hr/>
-
-        <h4>v3.01 18-11-2018</h4>
-        <p>In order to comply with the Grepolis rules going forward, our userscript will only allow manual report uploads</p>
-        <p>- An upload button will now be added to your inbox/forum reports. Using the button will send the intel to your index</p>
-        <p>- You can use the in-game settings menu to disable inbox or forum parsing</p>
-        <p>- Automatic background uploading is no longer featured as it is against the rules of Grepolis</p>
-
-        <hr/>
-
-        <h4>v2.09 16-11-2018</h4>
-        <p>- Ignore bandit camp reports</p>
-        <p>- Bugfixes</p>
-
-        <hr/>
-
-        <h4>v2.06 15-11-2018</h4>
-        <p>- Hide install banner on grepodata.com if script is already running</p>
-
-
-        <hr/>
-
-        <h4>v2.05 13-11-2018</h4>
-        <p>- Fixed duplicate submission buttons</p>
-        <p>- Non-intel reports are now properly ignored on the client side</p>
-
-        <hr/>
-
-        <h4>v2.04 12-11-2018</h4>
-        <p>Released version 2. General performance improvements and minor bugfixes.</p>
-
-        <hr/>
-
-        <h4>v2.00 12-11-2018</h4>
-        <p> - Version 2 of the userscript allows you to add reports straight from your report inbox
-          <br/> - Added an in-game settings menu allowing you to choose which reports are indexed and when
-          <br/> - Improved report parser to handle more reports
-          <br/> - Report hashes are generated client side
-          <br/> - Report hashes are shared between index users to avoid duplicate uploads
-          <br/> - Report hashes are stored and retrieved between sessions to keep track of already added reports
-        </p>
-
-
-        <br/>
-        <br/>
-        <div style="float: left;">
-          <a mat-button style="font-size: 18px; color: gray;" routerLink="/">
-            <span class="fa fa-backward"></span> Homepage
-          </a>
+        <div class="text-center"><h2 style=""> City Indexer Userscript Changelog</h2>
+          <h4>
+            <a href="https://github.com/GrepoDataTools/grepodata-backend/commits/master/Software/Application/Indexer/indexer.js" target="_blank">
+              <i class="fa fa-github" aria-hidden="true"></i> View full userscript change history on GitHub
+            </a>
+          </h4>
+          <p><strong>Note:</strong> You do not have to update the GrepoData userscript.
+            <br/>Your browser will automatically use the latest version.</p>
         </div>
+        <br/>
+        <br/>
 
-        <div style="float: right;">
-          <a mat-button style="font-size: 18px; color: gray;" routerLink="/indexer">
-            <span class="fa fa-forward"></span> City Indexer
+	      <h4>
+          21-09-2021 - <span class="label label-warning">Latest version</span> &nbsp;
+          <a href="https://github.com/GrepoDataTools/grepodata-backend/commit/9d08adba8c2a234d5b11c980c8c162c10cbb1d9a#diff-c99d467c47c572f6de633952fa1de8c54b36adb85d925f031b05dcad62e2d39e" target="_blank">
+            <i class="fa fa-github" aria-hidden="true"></i> View detailed changes on github.com
           </a>
-        </div>
+        </h4>
+	      <p>- Added a bugfix for town names in the support overview. Due to a bug in the game, the support overview shows the current town instead of the source town of your units. We added a function to our userscript that fixes this bug. </p>
 
+	      <hr/>
+
+	      <h4>
+          17-09-2021 -
+          <a href="https://github.com/GrepoDataTools/grepodata-backend/commit/11537c906c7b446882e4dc3cd54e4a9d92b1b42e#diff-c99d467c47c572f6de633952fa1de8c54b36adb85d925f031b05dcad62e2d39e" target="_blank">
+            <i class="fa fa-github" aria-hidden="true"></i> View detailed changes on github.com
+          </a>
+        </h4>
+	      <p>- Fixed a bug that would cause the GrepoData dialog windows to open in a weird way. </p>
+
+	      <hr/>
+
+	      <h4>
+          11-07-2021 -
+          <a href="https://github.com/GrepoDataTools/grepodata-backend/commit/a2620466801a256728c3a979bb15f12389cf95d2#diff-c99d467c47c572f6de633952fa1de8c54b36adb85d925f031b05dcad62e2d39e" target="_blank">
+            <i class="fa fa-github" aria-hidden="true"></i> View detailed changes on github.com
+          </a>
+        </h4>
+	      <p>- Add a tooltip to spy reports in the intel viewer that shows how much silver was used. </p>
+
+	      <hr/>
+
+	      <h4>
+          26-05-2021 -
+          <a href="https://github.com/GrepoDataTools/grepodata-backend/commit/dcfc38d27ff78ce50955b13b9a4a5b94071dda9d#diff-c99d467c47c572f6de633952fa1de8c54b36adb85d925f031b05dcad62e2d39e" target="_blank">
+            <i class="fa fa-github" aria-hidden="true"></i> View detailed changes on github.com
+          </a>
+        </h4>
+	      <p>- Bugfix for return time on movements to own cities. </p>
 
       </div>
     </div>
