--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -197,48 +197,7 @@
               </mat-card-content>
 
             </mat-tab>
-            <mat-tab>
-              <ng-template mat-tab-label>
-                <mat-icon style="opacity: 1; vertical-align: bottom;">watch_later</mat-icon>&nbsp;Activity<span class="hidden-xs">&nbsp;heatmap</span>
-              </ng-template>
-              <br/>
-	            <mat-card-title>
-                <div style="text-align: center; margin-top: 40px;">
-                  <h2 style='font-weight: 300; color: #304357;'><span class='world-title' style='color: #18BC9C;'>Sorry, the heatmap feature has been removed.</span></h2>
-                  <h4><strong>Due to privacy concerns, the activity heatmap feature has been removed from GrepoData entirely.</strong><br/>
-                    <br/>
-                    Instead of the heatmap, we will now show the last time this player has been active. This is indicated by one of these labels on the left panel: <br/>
-                  </h4>
-                  <div style="display: inline-grid; font-size: 16px;">
-                    <div style="display: inline-flex; margin-bottom: 5px;">
-                      <div class="btn-success btn-xs">Active</div> &nbsp; Player has gained attack or town points within the last 24 hours.
-                    </div>
-                    <div style="display: inline-flex; margin-bottom: 5px;">
-                    <div class="btn-warning btn-xs">Inactive</div> &nbsp; Player has gained attack or town points within the last 72 hours.
-                    </div>
-                    <div style="display: inline-flex;">
-                    <div class="btn-danger btn-xs">Inactive</div> &nbsp; Player has not gained any attack or town points for at least 72 hours or more.
-                    </div>
-                  </div>
-                </div>
 
-<!--                <ngx-charts-polar-chart-->
-<!--                  [view]="view"-->
-<!--                  [scheme]="colorScheme"-->
-<!--                  [legend]="true"-->
-<!--                  [showXAxisLabel]="false"-->
-<!--                  [showYAxisLabel]="false"-->
-<!--                  [xAxis]="true"-->
-<!--                  [yAxis]="true"-->
-<!--                  [xAxisLabel]="'Play style'"-->
-<!--                  [yAxisLabel]="'Rank'"-->
-<!--                  [results]="polar_chart_data"-->
-<!--                  (select)="onSelect($event)">-->
-<!--                </ngx-charts-polar-chart>-->
-
-	            </mat-card-title>
-
-            </mat-tab>
             <mat-tab>
               <ng-template mat-tab-label>
                 <mat-icon style="opacity: 1; vertical-align: bottom;">compare_arrows</mat-icon>&nbsp;
@@ -249,7 +208,6 @@
               <mat-card-title>
                 <div *ngIf="playerAllianceChanges.length > 0">
                   <h4 style='font-weight: 300; color: #304357;'>
-                    <span class='world-title' style='color: #18BC9C;'>Alliance changes</span>
                     <mat-spinner style="margin-left: 30px;" *ngIf="loadingChanges" strokeWidth="3" [diameter]="30"></mat-spinner>
                     <a *ngIf="playerAllianceChanges.length >= 10" routerLink="/changes/player/{{world}}/{{id}}" style="color: #949494; right: 20px; position: absolute;">
                       <mat-icon style="opacity: 1; vertical-align: bottom;" class="hidden-xs">launch</mat-icon> Show all changes
@@ -257,7 +215,16 @@
                   </h4>
                 </div>
 	              <div *ngIf="playerAllianceChanges.length <= 0">
-		              <p><strong>No changes found.</strong> We have not yet recorded any alliance changes for this player.</p>
+                  <div class="container-fluid">
+                    <div class="row">
+                      <br/>
+                      <br/>
+                      <div class="alert alert-warning text-center alert-gd-1">
+                        <h2><strong>No alliance changes found.</strong></h2>
+                        <p>We have not yet recorded any alliance changes for this player.</p>
+                      </div>
+                    </div>
+                  </div>
 	              </div>
               </mat-card-title>
               <br/>
